--- a/temi2summary.ipynb
+++ b/temi2summary.ipynb
@@ -6,7 +6,7 @@
       "name": "temi2summary.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMR0XZ6Z/RewBU6R6bn1B7p",
+      "authorship_tag": "ABX9TyPiLOApYDfN66uphNXs/oBw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2101,7 +2101,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u1-HSrywRSB6",
-        "outputId": "646b87ee-61b7-4e78-fe15-f842fbf38abf",
+        "outputId": "3b274e93-4940-4ff3-c6d6-f5f45d11308c",
         "collapsed": true
       },
       "outputs": [
@@ -2110,43 +2110,43 @@
           "name": "stdout",
           "text": [
             "Collecting transformers\n",
-            "  Downloading transformers-4.13.0-py3-none-any.whl (3.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 3.3 MB 5.1 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.19.5)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
+            "  Downloading transformers-4.14.1-py3-none-any.whl (3.4 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.4 MB 4.0 MB/s \n",
+            "\u001b[?25hCollecting tokenizers<0.11,>=0.10.1\n",
+            "  Downloading tokenizers-0.10.3-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (3.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.3 MB 43.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (2019.12.20)\n",
             "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from transformers) (4.8.2)\n",
             "Collecting sacremoses\n",
             "  Downloading sacremoses-0.0.46-py3-none-any.whl (895 kB)\n",
-            "\u001b[K     |████████████████████████████████| 895 kB 29.1 MB/s \n",
-            "\u001b[?25hCollecting tokenizers<0.11,>=0.10.1\n",
-            "  Downloading tokenizers-0.10.3-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (3.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 3.3 MB 44.7 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.4.0)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from transformers) (2.23.0)\n",
+            "\u001b[K     |████████████████████████████████| 895 kB 54.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.7/dist-packages (from transformers) (4.62.3)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.7/dist-packages (from transformers) (1.19.5)\n",
             "Collecting huggingface-hub<1.0,>=0.1.0\n",
             "  Downloading huggingface_hub-0.2.1-py3-none-any.whl (61 kB)\n",
-            "\u001b[K     |████████████████████████████████| 61 kB 451 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 61 kB 501 kB/s \n",
             "\u001b[?25hCollecting pyyaml>=5.1\n",
             "  Downloading PyYAML-6.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (596 kB)\n",
-            "\u001b[K     |████████████████████████████████| 596 kB 53.4 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (3.10.0.2)\n",
+            "\u001b[K     |████████████████████████████████| 596 kB 33.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.7/dist-packages (from transformers) (21.3)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from transformers) (3.4.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.7/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (3.10.0.2)\n",
             "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=20.0->transformers) (3.0.6)\n",
             "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->transformers) (3.6.0)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2021.10.8)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.15.0)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (7.1.2)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->transformers) (3.0.4)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.1.0)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (7.1.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from sacremoses->transformers) (1.15.0)\n",
             "Installing collected packages: pyyaml, tokenizers, sacremoses, huggingface-hub, transformers\n",
             "  Attempting uninstall: pyyaml\n",
             "    Found existing installation: PyYAML 3.13\n",
             "    Uninstalling PyYAML-3.13:\n",
             "      Successfully uninstalled PyYAML-3.13\n",
-            "Successfully installed huggingface-hub-0.2.1 pyyaml-6.0 sacremoses-0.0.46 tokenizers-0.10.3 transformers-4.13.0\n",
+            "Successfully installed huggingface-hub-0.2.1 pyyaml-6.0 sacremoses-0.0.46 tokenizers-0.10.3 transformers-4.14.1\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ]
@@ -2168,6 +2168,7 @@
         "from pathlib import Path\n",
         "import pandas as pd\n",
         "from transformers import pipeline\n",
+        "from nltk.tokenize import RegexpTokenizer\n",
         "import nltk.data\n",
         "\n",
         "nltk.download('punkt')"
@@ -2193,7 +2194,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G7tgeKbhXSBo",
-        "outputId": "45b6c8ee-316d-48a2-8473-eb6683de8dee"
+        "outputId": "57b97383-7e78-485b-902a-0920b5130636"
       },
       "execution_count": 2,
       "outputs": [
@@ -2320,7 +2321,7 @@
         "id": "qn0EH1JdXl2Z",
         "outputId": "d6639bac-0be2-4f43-c605-083a482217b9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2434,7 +2435,7 @@
       "metadata": {
         "id": "VLDnT4u7jtRy"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2462,7 +2463,7 @@
       "metadata": {
         "id": "20OslfuKYAvx"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2483,6 +2484,37 @@
       ],
       "metadata": {
         "id": "IWaRpPzlkeZr"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Calculate speaker stats"
+      ],
+      "metadata": {
+        "id": "hdTlDorkcrE5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = RegexpTokenizer(r'\\w+')\n",
+        "\n",
+        "word_count = []\n",
+        "for row in df_by_speaker.itertuples():\n",
+        "    tokens = tokenizer.tokenize(row.text)\n",
+        "    word_count.append(len(tokens))\n",
+        "\n",
+        "df_by_speaker['word_count'] = word_count\n",
+        "df_by_speaker['word_percent'] = (df_by_speaker['word_count'] /\n",
+        "                  df_by_speaker['word_count'].sum()) * 100\n",
+        "df_speak_counts = df_transcript.groupby(['speaker']).size().reset_index(name='speak_counts')\n",
+        "df_by_speaker = df_by_speaker.merge(df_speak_counts, how='outer', on='speaker')"
+      ],
+      "metadata": {
+        "id": "TCvKE3fJcyiS"
       },
       "execution_count": 7,
       "outputs": []
@@ -2573,7 +2605,7 @@
       "metadata": {
         "id": "yAzCLdOHknUi"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2604,7 +2636,7 @@
         "id": "wBU0RrJmGFsu",
         "outputId": "57ccdfcb-0752-49c0-8eb1-60b7dc9ed343"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2638,7 +2670,7 @@
         "id": "M394dBMFkt-1",
         "outputId": "9467b368-4939-4b23-dbe4-ad274b8ffcf6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2671,7 +2703,7 @@
       "metadata": {
         "id": "y5mcTnZMYQSo"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
